# essentia_mining_plugin

./: Cargo.toml  README.md
src/: config.rs  coordinator.rs  errors.rs  flexforge.rs  hardware.rs  lib.rs  plugin.rs  sha256.rs  stratum.rs  types.rs
src/errors/: mining_error.rs  mod.rs
src/impl/: config.rs  coordinator.rs  crypto.rs  hardware.rs  hash_rate_monitor.rs  mod.rs  plugin.rs  pool_management.rs  reward_distribution.rs  stratum.rs
src/traits/: core.rs  mod.rs
src/types/: core.rs  mod.rs
