[package]
name = "essentia_mining_plugin"
version = "0.1.0"
edition = "2024"
authors = ["Essentia Services Development <dev@essentia.services>"]
description = "Bitcoin/cryptocurrency mining plugin with hardware detection and background processing"
license = "MIT"
repository = "https://github.com/Essentia-Services-Development/essentia_mining_plugin"
readme = "README.md"
keywords = ["essentia", "mining", "bitcoin", "cryptocurrency", "plugin"]
categories = ["cryptography", "asynchronous"]

[dependencies]
essentia_core = { path = "../../core/essentia_core" }
essentia_traits = { path = "../../core/essentia_traits" }
essentia_hwdetect = { path = "../../core/essentia_hwdetect" }
essentia_async_runtime = { path = "../../core/essentia_async_runtime" }
essentia_resource_management = { path = "../../services/essentia_resource_management" }
essentia_plugin_system = { path = "../../core/essentia_plugin_system" }

[dev-dependencies]

[features]
default = []
gpu-mining = []

[lib]
name = "essentia_mining_plugin"
path = "src/lib.rs"
