[package]
name = "essentia_mining_plugin"
description = "Bitcoin/cryptocurrency mining plugin with hardware detection and background processing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
repository = "https://github.com/Essentia-Services-Development/essentia_mining_plugin"
keywords = ["essentia", "mining", "bitcoin", "cryptocurrency", "plugin"]
categories = ["cryptography", "asynchronous"]

[dependencies]
# Core dependencies (workspace inheritance)
essentia_api = { workspace = true }
essentia_core = { workspace = true }
essentia_traits = { workspace = true }
essentia_error = { workspace = true }
essentia_gpu_accel_kernel = { workspace = true }
essentia_harness = { workspace = true }
essentia_consciousness = { workspace = true }
essentia_hwdetect = { workspace = true }
essentia_async_runtime = { workspace = true }
essentia_resource_management = { workspace = true }
essentia_plugin_system = { workspace = true }

[dev-dependencies]

[features]
default = []
gpu-mining = []

[lib]
name = "essentia_mining_plugin"
path = "src/lib.rs"
